fix: ondernemer profile button removed, z-index for alert

--- a/src/scss/component/_Alert.scss
+++ b/src/scss/component/_Alert.scss
@@ -84,5 +84,6 @@
         left: auto;
         top: auto;
         max-width: 400px;
+        z-index: 90;
     }
 }
